--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simply, ping pong game.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^4.0.2"
   },
   "devDependencies": {},
   "scripts": {
